samples/_failures_safe/1761485794_3e0d0a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f18d7129.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_f18d7129.c:170:9: error: expected expression at end of input
  170 |         default: return
      |         ^~~~~~~
./samples/SAFE/__tmp_f18d7129.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f18d7129.c:170:9: error: expected declaration or statement at end of input
